fixed url lemgth overflow in poststream.CSS

--- a/client/src/components/PostStream.css
+++ b/client/src/components/PostStream.css
@@ -143,6 +143,12 @@
   margin: 0.5rem 0;
 }
 
+/* .post-info {
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  word-break: break-word;
+} */
+
 .post-info p {
   padding: 0.2rem 0.5rem;
   color: rgb(75, 76, 126);
@@ -156,6 +162,9 @@
 .post-info a {
   padding: 0.2rem 0.5rem;
   color: rgb(75, 76, 126);
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  word-break: break-word;
 }
 
 .post-read-more {
